<resources>
    <string name="app_name">Noter</string>

    <!-- /////////////////////////////////////////////////////////////////////////////////////// -->
    <!--                                  MENUS AND BUTTONS                                      -->
    <!-- /////////////////////////////////////////////////////////////////////////////////////// -->

    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="confirm">Confirm</string>
    <string name="rename">Rename</string>
    <string name="options">Options</string>
    <string name="new_note">New Note</string>
    <string name="duplicate_note">Duplicate</string>
    <string name="copy_content">Copy Content</string>
    <string name="delete">Delete</string>
    <string name="sort">Sort</string>
    <string name="search">Search</string>
    <string name="search_hint">Search Hint</string>
    <string name="search_label">Search Label</string>
    <string name="search_global_description">Search Global Description</string>
    <string name="sort_alpha">Title</string>
    <string name="sort_creation">Creation date</string>
    <string name="sort_modified">Modification date</string>
    <string name="sort_ascending">Ascending</string>
    <string name="sort_descending">Descending</string>
    <string name="content">Text</string>
    <string name="check_list">Check List</string>
    <string name="check_list_display_option">Show</string>
    <string name="check_list_display_all">All</string>
    <string name="check_list_display_done">Done</string>
    <string name="check_list_display_Undone">Undone</string>
    <string name="check_list_sort_option">Sort</string>
    <string name="check_list_sort_alpha">Alpha</string>
    <string name="check_list_sort_creation_date">Creation</string>
    <string name="check_list_sort_done_date">Completion</string>

    <!-- /////////////////////////////////////////////////////////////////////////////////////// -->
    <!--                              TOASTS, MESSAGES , ALERTS                                  -->
    <!-- /////////////////////////////////////////////////////////////////////////////////////// -->

    <string name="copy_content_toast">Content copied to clipboard !</string>
    <string name="note_created">Note created !</string>
    <string name="note_saved">Note saved !</string>
    <string name="add_icon">Select a suitable icon</string>
    <string name="icon_name_placeholder">Icon name</string>
    <string name="sorted_by_title">Sorted by Title</string>
    <string name="sorted_by_creation">Sorted by Creation Date</string>
    <string name="sorted_by_modification">Sorted by Last Modification</string>
    <string name="confirm_default">Confirm action ?</string>
    <string name="fab_content">FAB</string>
    <string name="duplicate_category_alert">This category already exists, do you want to continue?</string>
    <string name="category_short_alert">Category name is empty or too short!</string>
    <string name="note_name_short_alert">Note name is empty or too short!</string>
    <string name="delete_note_alert">Confirm deleting note :</string>
    <string name="delete_check_list_alert">Confirm deleting this item? </string>
    <string name="duplicate_note_title_alert">A note with the same name exists, are you sure you want to continue?</string>
    <string name="check_list_item_short_alert">Item description is empty or too short !</string>

    <!-- /////////////////////////////////////////////////////////////////////////////////////// -->
    <!--                                   PLACEHOLDERS                                          -->
    <!-- /////////////////////////////////////////////////////////////////////////////////////// -->

    <string name="titleHint">Note Name</string>
    <string name="titleDefault">New Note</string>
    <string name="categoryDefault">Default Category</string>
    <string name="newCategory">New category name here …</string>
    <string name="contentHint">What\'s new today\? </string>
    <string name="inputHint">Your input here</string>
    <string name="copy"> (copy)</string>
    <string name="checkListItemHint">To do …</string>
    <string name="checkListCountHolder">0/0</string>

    <!-- /////////////////////////////////////////////////////////////////////////////////////// -->
    <!--                                     ICONS NAME                                          -->
    <!-- /////////////////////////////////////////////////////////////////////////////////////// -->

    <string name="ic_noter">Noter</string>
    <string name="ic_workplace">Workplace</string>
    <string name="ic_options_0">Options</string>
    <string name="ic_screwdriver">Screwdriver</string>
    <string name="ic_computer">Computer</string>
    <string name="ic_monitor">Monitor</string>
    <string name="ic_cu">Central Unit</string>
    <string name="ic_telephone">Telephone</string>
    <string name="ic_smartphone">Smart Phone</string>
    <string name="ic_database">Database</string>
    <string name="ic_folder">Folder</string>
    <string name="ic_file">File</string>
    <string name="ic_locker">Locker</string>
    <string name="ic_key">Key</string>
    <string name="ic_coffee">Coffee</string>
    <string name="ic_bonfire">Bonfire</string>

</resources>