<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:yourapp="http://schemas.android.com/tools"
    android:theme="@style/ThemeOverlay.AppCompat.Light">

    <item android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_search_0"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item android:id="@+id/sort_type"
        android:title="@string/sort_ascending"
        app:showAsAction="never"
        />

    <item android:id="@+id/sort_alpha"
        android:title="@string/sort_alpha"
        app:showAsAction="never"
        />

    <item android:id="@+id/sort_creation"
        android:title="@string/sort_creation"
        app:showAsAction="never"
        />

    <item android:id="@+id/sort_modified"
        android:title="@string/sort_modified"
        app:showAsAction="never"
        />

</menu>