<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_yellow_light"
    tools:context=".NoteActivity">

    <EditText
        android:id="@+id/note_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:minLines="1"
        android:hint="@string/titleHint"
        android:text="@string/titleDefault"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/note_text"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="8dp"
        style="@style/noteActivityTitleStyle"/>

    <EditText
        android:id="@+id/note_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/contentHint"
        android:gravity="top"
        android:minLines="1"
        app:layout_constraintTop_toBottomOf="@id/note_title"
        app:layout_constraintBottom_toTopOf="@id/note_button_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="8dp"
        style="@style/noteActivityContentTextStyle"/>

    <LinearLayout
        android:id="@+id/note_button_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>