<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ripple_beau_blue_lighter_to_darker_0dp"
    >

    <TextView
        android:id="@+id/confirm_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_default"
        android:gravity="center"
        android:layout_margin="8dp"
        style="@style/black_standard_20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/cancel_action_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        style="@style/button_default_style"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/confirm_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="@id/confirm_action_button"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/confirm_action_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        style="@style/button_default_style"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/confirm_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/cancel_action_button"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
