<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp"
    app:cardCornerRadius="0dp"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@color/beau_blue_lighter"
    app:cardElevation="8dp"
    app:cardUseCompatPadding="false"
    app:cardPreventCornerOverlap="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <TextView
        android:id="@+id/category_option_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/categoryDefault"
        android:textAlignment="center"
        android:paddingVertical="8dp"
        android:textStyle="bold"
        style="@style/black_standard_20sp"/>

    <EditText
        android:id="@+id/category_rename_option"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/categoryDefault"
        android:maxLength="50"
        android:selectAllOnFocus="true"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:inputType="textCapSentences"
        app:layout_constraintTop_toBottomOf="@id/category_option_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/category_rename_button"/>

    <Button
        android:id="@+id/category_rename_button"
        android:layout_width="100dp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/rename"
        android:layout_height="wrap_content"
        style="@style/button_default_style"
        app:layout_constraintTop_toBottomOf="@id/category_option_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/category_rename_option"
        />

    <Button
        android:id="@+id/category_delete_button"
        android:layout_width="100dp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/delete"
        android:layout_height="wrap_content"
        style="@style/button_default_style"
        app:layout_constraintTop_toBottomOf="@id/category_rename_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/category_rename_option"
        />

    <Button
        android:id="@+id/category_cancel_button"
        android:layout_width="100dp"
        android:text="@string/cancel"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        style="@style/button_default_style"
        app:layout_constraintTop_toBottomOf="@id/category_delete_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/category_rename_option"
        />

</androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>