<?xml version="1.0" encoding="utf-8"?>

        <!--
        XML file describing Note template
        for the MainActivity Recycler View
        -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="4dp"
    android:layout_marginVertical="4dp"
    android:elevation="4dp"
    android:orientation="vertical"
    style="@style/ripple_beau_blue_lighter_to_darker_5dp">

    <!--
        ImageView for Note.icon
    -->
    <ImageView
        android:id="@+id/card_icon"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_margin="4dp"
        android:padding="8dp"
        android:layout_gravity="center"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_small"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/card_info"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/card_icon"
        app:layout_constraintRight_toLeftOf="@id/card_options"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:paddingHorizontal="4dp"
            android:id="@+id/card_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.65"
            android:gravity="center_vertical"
            android:text="@string/titleDefault"
            android:maxLines="1"
            android:minLines="1"
            android:maxLength="50"
            android:singleLine="true"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="2dp"
            style="@style/black_standard_18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/card_category"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:paddingHorizontal="4dp"
            android:id="@+id/card_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:gravity="center_vertical"
            android:text="@string/categoryDefault"
            android:singleLine="true"
            android:maxLength="50"
            android:textStyle="italic"
            android:layout_marginHorizontal="4dp"
            style="@style/black_standard_14sp"
            app:layout_constraintTop_toBottomOf="@id/card_title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/card_preview"
            />

        <TextView
            android:id="@+id/card_preview"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:paddingHorizontal="4dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/contentHint"
            android:layout_marginHorizontal="4dp"
            android:layout_marginBottom="2dp"
            style="@style/darker_grey_italic_12sp_two_lines"
            app:layout_constraintTop_toBottomOf="@id/card_category"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/card_addition_preview"
            />

        <LinearLayout
            android:id="@+id/card_addition_preview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="4dp"
            app:layout_constraintTop_toBottomOf="@id/card_preview"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/card_check_list_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="2dp"
                android:src="@drawable/ic_checkbox_0"/>

            <TextView
                android:id="@+id/card_check_list_count"
                android:layout_marginStart="4dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/checkListCountHolder"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>



    <ImageView
        android:id="@+id/card_options"
        android:layout_width="40dp"
        android:padding="8dp"
        android:layout_height="match_parent"
        android:src="@drawable/three_dot_vert"
        style="@style/ripple_beau_blue_lighter_to_darker_5dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/options"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <!--
    LinearLayout to align everything together
    proportionally depending on the screen size
    -->



</androidx.constraintlayout.widget.ConstraintLayout>